--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <!-- Slots Container -->
             <div class="flex-grow grid grid-cols-4 gap-3">
                 <!-- Slot 1 -->
-                <div class="aspect-square bg-sky-600 rounded-lg shadow-md"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
                 <!-- Slot 2 -->
-                <div class="aspect-square bg-emerald-600 rounded-lg shadow-md"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
                 <!-- Slot 3 -->
-                <div class="aspect-square bg-amber-600 rounded-lg shadow-md"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
                 <!-- Slot 4 -->
-                <div class="aspect-square bg-rose-600 rounded-lg shadow-md"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
             </div>
 
             <!-- Right Button -->
@@ -178,6 +178,7 @@
 
 </body>
 </html>
+
 
 
 
