--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
         <!-- Equipment Slots -->
         <div id="equipment-bar" class="flex-shrink-0 flex items-center my-4 gap-3">
             <!-- Left Button -->
-            <button id="cycle-left-btn" class="w-10 h-10 bg-purple-600 rounded-full flex items-center justify-center shadow-md control-btn flex-shrink-0">
+            <button id="cycle-left-btn" class="w-8 h-8 bg-purple-600 rounded-full flex items-center justify-center control-btn flex-shrink-0 shadow-[0_0_12px_rgba(168,85,247,0.8)]">
             </button>
 
             <!-- Slots Container -->
             <div class="flex-grow grid grid-cols-4 gap-3">
                 <!-- Slot 1 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🗡️</span></div>
                 <!-- Slot 2 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🔮</span></div>
                 <!-- Slot 3 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🍎</span></div>
                 <!-- Slot 4 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double"></div>
+                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🍞</span></div>
             </div>
 
             <!-- Right Button -->
-            <button id="cycle-right-btn" class="w-10 h-10 bg-pink-500 rounded-full flex items-center justify-center shadow-md control-btn flex-shrink-0">
+            <button id="cycle-right-btn" class="w-8 h-8 bg-pink-500 rounded-full flex items-center justify-center control-btn flex-shrink-0 shadow-[0_0_12px_rgba(236,72,153,0.8)]">
             </button>
         </div>
 
@@ -178,6 +178,7 @@
 
 </body>
 </html>
+
 
 
 
