--- a/index.html
+++ b/index.html
@@ -62,26 +62,18 @@
         </header>
 
         <!-- Equipment Slots -->
-        <div id="equipment-bar" class="flex-shrink-0 flex items-center my-4 gap-3">
-            <!-- Left Button -->
-            <button id="cycle-left-btn" class="w-8 h-8 bg-purple-600 rounded-full flex items-center justify-center control-btn flex-shrink-0 shadow-[0_0_12px_rgba(168,85,247,0.8)]">
-            </button>
-
+        <div id="equipment-bar" class="flex-shrink-0 my-4">
             <!-- Slots Container -->
-            <div class="flex-grow grid grid-cols-4 gap-3">
+            <div class="grid grid-cols-4 gap-3">
                 <!-- Slot 1 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🗡️</span></div>
+                <div class="aspect-square bg-black rounded-lg shadow-[0_0_0_2px_#FBBF24,0_0_0_4px_#34D399] flex items-center justify-center"><span class="text-4xl md:text-5xl">🗡️</span></div>
                 <!-- Slot 2 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🔮</span></div>
+                <div class="aspect-square bg-black rounded-lg shadow-[0_0_0_2px_#FBBF24,0_0_0_4px_#34D399] flex items-center justify-center"><span class="text-4xl md:text-5xl">🔮</span></div>
                 <!-- Slot 3 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🍎</span></div>
+                <div class="aspect-square bg-black rounded-lg shadow-[0_0_0_2px_#FBBF24,0_0_0_4px_#34D399] flex items-center justify-center"><span class="text-4xl md:text-5xl">🍎</span></div>
                 <!-- Slot 4 -->
-                <div class="aspect-square bg-black rounded-lg shadow-md border-2 border-white border-double flex items-center justify-center"><span class="text-3xl md:text-4xl">🍞</span></div>
+                <div class="aspect-square bg-black rounded-lg shadow-[0_0_0_2px_#FBBF24,0_0_0_4px_#34D399] flex items-center justify-center"><span class="text-4xl md:text-5xl">🍞</span></div>
             </div>
-
-            <!-- Right Button -->
-            <button id="cycle-right-btn" class="w-8 h-8 bg-pink-500 rounded-full flex items-center justify-center control-btn flex-shrink-0 shadow-[0_0_12px_rgba(236,72,153,0.8)]">
-            </button>
         </div>
 
         <!-- Game Canvas Area -->
@@ -161,15 +153,6 @@
             document.getElementById('action-btn-b').addEventListener('click', () => {
                 console.log('Action button B pressed');
             });
-            
-            document.getElementById('cycle-left-btn').addEventListener('click', () => {
-                console.log('Cycle equipment left');
-            });
-
-            document.getElementById('cycle-right-btn').addEventListener('click', () => {
-                console.log('Cycle equipment right');
-            });
-
 
             // Initial setup
             resizeCanvas();
@@ -178,14 +161,4 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
 
