--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="game-container" class="w-full h-full max-w-md mx-auto flex flex-col p-4">
 
         <!-- Header: Game Stats -->
-        <header class="flex-shrink-0 flex w-full rounded-t-lg shadow-lg mb-4 overflow-hidden h-12">
+        <header class="flex-shrink-0 flex w-full rounded-lg mb-4 overflow-hidden h-12 shadow-[0_0_0_2px_#FBBF24,0_0_0_4px_#34D399]">
             <!-- Health Meter -->
             <div class="flex-1 bg-black relative flex items-center justify-center">
                 <div id="health-bar" class="bg-red-500 h-full absolute top-0 left-0" style="width: 80%;"></div>
@@ -44,6 +44,9 @@
                 </div>
             </div>
 
+            <!-- Divider -->
+            <div class="w-1 bg-black"></div>
+
             <!-- Energy Meter -->
             <div class="flex-1 bg-black relative flex items-center justify-center">
                 <div id="energy-bar" class="bg-yellow-400 h-full absolute top-0 left-0" style="width: 60%;"></div>
@@ -51,6 +54,9 @@
                     <span class="text-2xl" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">✨</span>
                 </div>
             </div>
+
+            <!-- Divider -->
+            <div class="w-1 bg-black"></div>
 
             <!-- Shield Meter -->
             <div class="flex-1 bg-black relative flex items-center justify-center">
@@ -82,28 +88,9 @@
         </main>
 
         <!-- Controls Area -->
-        <footer class="flex-shrink-0 mt-4">
-            <div class="grid grid-cols-2 gap-4 items-center">
-                <!-- 4x2 Grid -->
-                <div class="col-span-1">
-                     <div class="grid grid-cols-4 gap-2">
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                        <button class="aspect-square bg-gray-700 rounded-lg shadow-md control-btn"></button>
-                    </div>
-                </div>
-
-                <!-- Action Buttons -->
-                <div class="col-span-1 flex justify-end items-center gap-3">
-                    <button id="action-btn-b" class="w-20 h-20 bg-sky-600 rounded-full flex items-center justify-center shadow-lg control-btn"></button>
-                    <button id="action-btn-a" class="w-24 h-24 bg-red-600 rounded-full flex items-center justify-center shadow-lg control-btn"></button>
-                </div>
-            </div>
+        <footer class="flex-shrink-0 mt-4 flex justify-center items-center">
+            <!-- Action Button -->
+            <button id="action-btn-a" class="w-24 h-24 bg-purple-600 rounded-full flex items-center justify-center control-btn shadow-[0_0_0_2px_#FBBF24,0_0_0_4px_#34D399]"></button>
         </footer>
 
     </div>
@@ -148,10 +135,6 @@
             // Button feedback
             document.getElementById('action-btn-a').addEventListener('click', () => {
                 console.log('Action button A pressed');
-            });
-
-            document.getElementById('action-btn-b').addEventListener('click', () => {
-                console.log('Action button B pressed');
             });
 
             // Initial setup
