--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
         }
         /* Style for the control buttons for a tactile feel */
         .control-btn {
-            transition: transform 0.1s ease, box-shadow 0.1s ease;
+            transition: transform 0.1s ease;
         }
-        .control-btn:active {
-            transform: scale(0.95);
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+
+        /* Animation class to be added via JavaScript */
+        .animate-press {
+            animation: press-animation 0.2s ease-out;
         }
+
+        @keyframes press-animation {
+            0% {
+                transform: scale(1);
+                filter: brightness(100%);
+            }
+            50% {
+                transform: scale(0.85);
+                filter: brightness(160%);
+            }
+            100% {
+                transform: scale(1);
+                filter: brightness(100%);
+            }
+        }
+        
         /* CRT Filter Styles */
         .crt-overlay {
             position: fixed;
@@ -76,7 +93,7 @@
         <!-- Header: Game Stats -->
         <header class="flex-shrink-0 flex w-full rounded-lg mb-4 overflow-hidden h-12 shadow-[0_0_0_1px_#FDE047,0_0_0_2px_#06B6D4,0_0_0_3px_#EC4899]">
             <!-- Health Meter -->
-            <div class="flex-1 bg-black relative flex items-center justify-center">
+            <div class="flex-1 bg-red-950 relative flex items-center justify-center">
                 <div id="health-bar" class="bg-red-500 h-full absolute top-0 left-0" style="width: 80%;"></div>
                 <div class="relative z-10 flex items-center">
                     <span class="text-2xl" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">❤️</span>
@@ -84,7 +101,7 @@
             </div>
 
             <!-- Energy Meter -->
-            <div class="flex-1 bg-black relative flex items-center justify-center">
+            <div class="flex-1 bg-yellow-900 relative flex items-center justify-center">
                 <div id="energy-bar" class="bg-yellow-400 h-full absolute top-0 left-0" style="width: 60%;"></div>
                 <div class="relative z-10 flex items-center">
                     <span class="text-2xl" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">✨</span>
@@ -92,8 +109,8 @@
             </div>
 
             <!-- Shield Meter -->
-            <div class="flex-1 bg-black relative flex items-center justify-center">
-                <div id="shield-bar" class="bg-blue-500 h-full absolute top-0 left-0" style="width: 95%;"></div>
+            <div class="flex-1 bg-blue-950 relative flex items-center justify-center">
+                <div id="shield-bar" class="bg-sky-400 h-full absolute top-0 left-0" style="width: 95%;"></div>
                 <div class="relative z-10 flex items-center">
                     <span class="text-2xl" style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">🛡️</span>
                 </div>
@@ -169,8 +186,17 @@
             window.addEventListener('resize', resizeCanvas);
 
             // Button feedback
-            document.getElementById('action-btn-a').addEventListener('click', () => {
+            const actionButton = document.getElementById('action-btn-a');
+            actionButton.addEventListener('click', () => {
                 console.log('Action button A pressed');
+                
+                // Add animation class
+                actionButton.classList.add('animate-press');
+
+                // Remove class after animation ends to allow re-triggering
+                actionButton.addEventListener('animationend', () => {
+                    actionButton.classList.remove('animate-press');
+                }, { once: true }); // Important: listener removes itself after running once
             });
 
             // Initial setup
