--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             </section>
 
             <!-- 5. Slim Bottom Section: Navigation -->
-            <footer class="flex-shrink-0 h-20 bg-gray-900/50 p-3 flex justify-around items-center border-t border-gray-700">
+            <footer class="flex-shrink-0 h-24 bg-gray-900/50 p-3 flex justify-around items-center border-t border-gray-700">
                 <a href="#" class="flex-1 text-gray-400 hover:text-white transition-colors flex flex-col items-center justify-center">
                     <div class="w-8 h-8 bg-gray-600 rounded"></div>
                 </a>
                 <a href="#" class="flex-1 text-white flex flex-col items-center">
-                    <div class="w-16 h-16 rounded-full bg-sky-500 flex items-center justify-center border-4 border-gray-700 transition-transform duration-100 ease-in-out active:scale-90">
+                    <div class="w-20 h-20 rounded-full bg-purple-600 flex items-center justify-center transition-transform duration-100 ease-in-out active:scale-90">
                     </div>
                 </a>
                 <a href="#" class="flex-1 text-gray-400 hover:text-white transition-colors flex flex-col items-center justify-center">
